fixed issue with map migration on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,12 +120,6 @@ h2 {
     
 }
 
-.iframe-wrapper {
-
-    position:fixed;
-    bottom:5% ;left:0;
-    width:100%;
-}
 
 .contact-text {
     text-align: center;
